[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dfimage"
version = "1.0.0"
description = "Reverse-engineer a Dockerfile from a Docker Image"
authors = [
  { name = "LanikSJ", email = "12159404+LanikSJ@users.noreply.github.com" },
]
license = { text = "MIT" }
dependencies = ["docker==7.1.0"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
keywords = ["docker", "dockerfile", "reverse-engineer"]

[dependency-groups]
dev = ["build", "twine"]

[project.scripts]
dfimage = "entrypoint:__main__"

[tool.setuptools]
py-modules = ['lib', 'lib64', 'dfimage', 'include', 'docker']
